[tool.poetry]
name = "ml-ops-iris"
version = "0.1.0"
description = ""
authors = ["Maria Manakhova <msmanakhova@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6.0"
hydra-core = "^1.3.2"
dvc = "^3.36.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
