[tool.poetry]
name = "ml-ops-iris"
version = "0.1.0"
description = ""
authors = ["Maria Manakhova <msmanakhova@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
pathlib = "^1.0.1"
joblib = "^1.3.2"
omegaconf = "^2.3.0"
dvc-gdrive = "^3.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6.0"
hydra-core = "^1.3.2"
dvc = "^3.36.1"

[tool.black]
line-length = 80
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80
lines_after_imports = 2

[tool.flake8]
exclude = [".git", "__pycache__", "build", "dist", ".ipynb_checkpoints"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
